feat: Added custom host & port

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 MAX_AGE="604800" #The maximum session time in seconds
 COOKIE_NAME="_Security_Login_" #The name of how cookies are stored
+
+PORT=4321 #The port to run the server on
+HOST=localhost #The host to run the server on
