--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.4.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "HOST=0.0.0.0 PORT=3000 node ./dist/server/entry.mjs",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/node": "^8.3.2",
-    "astro": "^4.12.1",
+    "astro": "^4.13.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
