--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MAX_AGE="604800" #The maximum session time in seconds
 COOKIE_NAME="_Security_Login_" #The name of how cookies are stored
+COOKIE_SECRET="secret" #The secret to encrypt the cookie
 
 PORT=4321 #The port to run the server on
 HOST=localhost #The host to run the server on
