feat: Added COOKIE_SECURE

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 MAX_AGE="604800" #The maximum session time in seconds
 COOKIE_NAME="_Security_Login_" #The name of how cookies are stored
 COOKIE_SECRET="secret" #The secret to encrypt the cookie
+COOKIE_SECURE=false #Whether or not to use HTTPS
 
 PORT=4321 #The port to run the server on
 HOST=localhost #The host to run the server on
