--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.6.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "node ./dist/server/entry.mjs",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
