--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/vercel": "^7.7.2",
     "astro": "^4.13.2",
     "jsonwebtoken": "^9.0.2"
   },
